# arkham-robcotech

./: .env.production  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT_PLAN.md  FULLSTACKARKHAM_DEPLOYMENT_GUIDE.md  GEMINI.md  LAUNCH_LIST.md  LAUNCH_STATUS.md  LAUNCH_TODAY.md  Makefile  PHASE1_COMPLETE.md  README.md  aca_env_secrets_audit.md  docker-compose.yml  run_deployment_team.py
.agents/: INTEGRATION_TEST_PLAN.md  MEDIA_COMMERCE_BUILD_PLAN.md  MEDIA_COMMERCE_BUILD_SUMMARY.md  PROJECT_CONTEXT.md  SUBAGENT_TEAM.md  vertical-build-coordination.md  worker-loop-agent-steplist.md
.firecrawl/: home.json  sitemap_check.json
azure-runner-agent/: GEMINI.md  README.md  pyproject.toml
deploy-bot/: README.md
docs/: 13_ENTITY_VERTICAL_BUILD_PLAN.md  DIGITAL_IT_GIRL_VERTICAL_EXECUTION_PLAN.md  ECOMMERCE_VERTICAL_EXECUTION_PLAN.md  FUTURE_NOTIFICATIONS.md  SAAS_VERTICAL_EXECUTION_PLAN.md  STRIPE_AGENT_API_SETUP.md  STRIPE_STELAR_SETUP.md  STRIPE_YEARLY_SETUP.md  (+1 more)
finisher-agent/: README.md  (+1 more)
launch-agent/: DESIGN_SPEC.md  README.md  pyproject.toml
launch-agent/.github/workflows/: LEGACY_GCP_NOTICE.md  staging.yaml
launch-agent/app/: __init__.py  agent.py  fast_api_app.py  project_profile.py
launch-agent/app/app_utils/: telemetry.py  typing.py
launch-agent/deployment/: LEGACY_GCP_NOTICE.md
launch-agent/deployment/terraform/cicd/: service.tf  variables.tf
launch-agent/deployment/terraform/cicd/vars/: env.tfvars
launch-agent/deployment/terraform/single-project/: service.tf  variables.tf
launch-agent/deployment/terraform/single-project/vars/: env.tfvars
(+232 files in other folders)
